--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  firebase_auth: ^0.20.0+1
+  cloud_firestore: ^0.16.0
 
 dev_dependencies:
   flutter_test:
