--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
+
 dependencies:
   flutter:
     sdk: flutter
@@ -27,6 +28,7 @@ dependencies:
   flutter_svg: ^0.18.0
   firebase_auth: ^0.20.0+1
   firebase_core: "^0.7.0"
+  google_sign_in: ^4.5.9
 
 
   # The following adds the Cupertino Icons font to your application.
