--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   provider: ^4.3.2+3
   flutter_svg: ^0.18.0
   firebase_auth: ^0.20.0+1
-  firebase_core: "^0.7.0"
+  firebase_core: "0.7.0"
 
 
   # The following adds the Cupertino Icons font to your application.
