--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   firebase_auth: ^0.20.0+1
   firebase_core: "^0.7.0"
   google_sign_in: ^4.5.9
+  flutter_facebook_login: ^3.0.0
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
