--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,7 @@
-org.gradle.jvmargs=-XX:MaxHeapSize=256m -Xmx256m
+#org.gradle.jvmargs=-XX:MaxHeapSize=256m -Xmx256m
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
+org.gradle.parallel=true
+
+org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=500m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
