--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_sign_in: ^4.5.9
   flutter_facebook_login: ^3.0.0
   http: ^0.12.2
+  jwt_decoder: ^1.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
