--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   http: ^0.12.2
   jwt_decoder: ^1.0.3
+  flutter_localizations: # Add this line
+    sdk: flutter
+  shared_preferences: ^0.5.12+4
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,6 +66,9 @@ flutter:
      - assets/icons/
      - assets/images/
      - assets/illustrations/
+     - lib/lang/ar.json
+     - lib/lang/en.json
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
