--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_localizations: # Add this line
     sdk: flutter
   shared_preferences: ^0.5.12+4
+  google_maps_flutter: ^1.1.1
 
 
 
