--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   carousel_slider: ^3.0.0
   im_stepper: ^0.1.2+9
 
+  #font_awesome_flutter: ^9.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
