--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,7 @@ dependencies:
   im_stepper: ^0.1.2+9
 
   #font_awesome_flutter: ^9.0.0
-
-
+# device_preview: ^0.5.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
