--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,5 +46,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSAllowsArbitraryLoads</key>
+    <true/>
 </dict>
 </plist>
