--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,31 +24,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.2+3
-  flutter_svg: ^0.18.0
-  firebase_auth: ^0.20.0+1
-  firebase_core: "^0.7.0"
-  google_sign_in: ^4.5.9
+  provider: ^5.0.0
+  flutter_svg: ^0.21.0-nullsafety.0
+  firebase_auth: ^1.0.1
+  firebase_core: ^1.0.2
+  google_sign_in: ^5.0.1
   flutter_facebook_login: ^3.0.0
-  http: ^0.12.2
-  jwt_decoder: ^1.0.3
+  http: ^0.13.1
+  jwt_decoder: ^2.0.1
   flutter_localizations: # Add this line
     sdk: flutter
-  shared_preferences: ^0.5.12+4
-  google_maps_flutter: ^1.1.1
-  geolocator: ^6.1.14
-  location: ^3.2.4
+  shared_preferences: ^2.0.5
+  google_maps_flutter: ^2.0.2
+  geolocator: ^7.0.1
+  location: ^4.1.1
   flutter_polyline_points: ^0.2.4
-  carousel_slider: ^3.0.0
+  carousel_slider: ^4.0.0-nullsafety.0
   im_stepper: ^0.1.2+9
+  device_preview: ^0.7.1
 
   #font_awesome_flutter: ^9.0.0
-# device_preview: ^0.5.5
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  cloud_firestore: ^0.16.0
+  cupertino_icons: ^1.0.2
+  cloud_firestore: ^1.0.3
 
 dev_dependencies:
   flutter_test:
