some updates done on to co-op with migrating to flutter 2

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="customer_app"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true">
 
         <!--Maps API KEY-->
         <meta-data android:name="com.google.android.geo.API_KEY"
