--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   carousel_slider: ^4.0.0-nullsafety.0
   im_stepper: ^0.1.2+9
   device_preview: ^0.7.1
+  animated_text_kit: ^4.1.1
 
   #font_awesome_flutter: ^9.0.0
 
