--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^5.0.0
-  flutter_svg: ^0.21.0-nullsafety.0
+  flutter_svg: ^0.22.0
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.2
   google_sign_in: ^5.0.1
@@ -38,7 +38,7 @@ dependencies:
   google_maps_flutter: ^2.0.2
   geolocator: ^7.0.1
   location: ^4.1.1
-  flutter_polyline_points: ^0.2.4
+  flutter_polyline_points: ^1.0.0
   carousel_slider: ^4.0.0-nullsafety.0
   im_stepper: ^0.1.2+9
   device_preview: ^0.7.1
@@ -46,7 +46,7 @@ dependencies:
   hive_flutter: ^1.0.0
   path_provider: ^2.0.1
   hive_generator: ^1.0.1
-  build_runner: ^1.12.2
+  build_runner: ^2.0.4
   animated_text_kit: ^4.1.1
   flutter_advanced_avatar: ^1.0.0+1
 
@@ -56,12 +56,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^1.0.3
+  cloud_firestore: ^2.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  visibility_detector: ^0.1.5
+  visibility_detector: ^0.2.0
   flutter_swiper: ^1.1.6
 
 # For information on the generic Dart part of this file, see the
