--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   build_runner: ^2.0.4
   animated_text_kit: ^4.1.1
   flutter_advanced_avatar: ^1.0.0+1
+  flutter_local_notifications: ^6.0.0
 
   #font_awesome_flutter: ^9.0.0
 
