--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   animated_text_kit: ^4.1.1
   flutter_advanced_avatar: ^1.0.0+1
   flutter_local_notifications: ^6.0.0
+  cool_alert: ^1.1.0
 
   #font_awesome_flutter: ^9.0.0
 
