--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_advanced_avatar: ^1.0.0+1
   flutter_local_notifications: ^6.0.0
   cool_alert: ^1.1.0
+  rflutter_alert: ^2.0.2
 
   #font_awesome_flutter: ^9.0.0
 
