--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_local_notifications: ^6.0.0
   cool_alert: ^1.1.0
   rflutter_alert: ^2.0.2
+  rating_dialog: ^2.0.1
 
   #font_awesome_flutter: ^9.0.0
 
